update img references

--- a/src/app/components/blog/blog.component.html
+++ b/src/app/components/blog/blog.component.html
@@ -8,7 +8,7 @@
       </p>
     </div>
     <div class="col-12 col-md-6 ml-md-auto mt-4 mt-md-0">
-      <img alt="image" class="img-fluid" src="../../../assets/img/2.svg" />
+      <img alt="image" class="img-fluid" src="assets/im/2.svg" />
     </div>
   </div>
 </section>
@@ -16,7 +16,9 @@
 <section class="auto-space auto-space-vertical pt-0">
   <div class="row">
     <div class="col-sm-12">
-      <h2 class="section-title description font-weight-bold mb-5">Latest Blog Posts</h2>
+      <h2 class="section-title description font-weight-bold mb-5">
+        Latest Blog Posts
+      </h2>
     </div>
   </div>
 </section>
