--- a/src/app/components/board/board.component.html
+++ b/src/app/components/board/board.component.html
@@ -1,33 +1,27 @@
 <section class="team-boxed auto-space auto-space-vertical">
   <p class="page-title pb-0" data-aos="fade-up">Notre expertise</p>
 
-  <div class="text-center text-muted" >
-    <h2 class="description">Vous trouverez ci-dessous quelques projets des clients qu'on a accompagner dans le cadre de leurs transformations digitales </h2>
+  <div class="text-center text-muted">
+    <h2 class="description">
+      Vous trouverez ci-dessous quelques projets des clients qu'on a accompagner
+      dans le cadre de leurs transformations digitales
+    </h2>
   </div>
-
-  
-
-
 </section>
 <section>
   <div class="container-fluid auto-space auto-space-vertical my-3">
     <div class="row justify-content-center align-items-center">
-      <img
-        class="mascot mb-5 mb-lg-0 mr-lg-3"
-        src="../../assets/img/ca.png"
-      />
+      <img class="mascot mb-5 mb-lg-0 mr-lg-3" src="/assets/img/ca.png" />
       <div class="col col-11 col-md-8 col-lg-4 ml-0 ml-lg-5 text-center">
         <h2 class="h2">Crédit Agricole Corporate & Investment Bank</h2>
         <br />
         <p class="description-text text-center">
-          Crédit Agricole CIB est la banque de financement et d'investissement du groupe Crédit Agricole.
-          On est intervenu au niveau de la conception et développement d'une partie du SI liée au KYC
-          Environnement technique : technologies open source, Spring, Hibernate, Oracle
+          Crédit Agricole CIB est la banque de financement et d'investissement
+          du groupe Crédit Agricole. On est intervenu au niveau de la conception
+          et développement d'une partie du SI liée au KYC Environnement
+          technique : technologies open source, Spring, Hibernate, Oracle
         </p>
       </div>
     </div>
   </div>
-  
 </section>
-
-
