--- a/src/app/components/common/footer/footer.component.html
+++ b/src/app/components/common/footer/footer.component.html
@@ -7,7 +7,7 @@
             <div class="footer-logo">
               <a href="index.html"
                 ><img
-                  src="../../../../assets/img/logo-assiva-white.jpeg"
+                  src="assets/img/logo-assiva-white.jpeg"
                   class="img-fluid"
                   alt="logo"
                   height="80"
@@ -15,9 +15,7 @@
               /></a>
             </div>
             <div class="footer-text">
-              <p>
-                Welcome to Assiva consulting
-              </p>
+              <p>Welcome to Assiva consulting</p>
             </div>
             <div class="footer-social-icon">
               <span>Connect with us</span>
@@ -105,9 +103,7 @@
               </li>
               <li><a routerLink="/code-conduct">Code of Conduct</a></li>
               <li>
-                <a
-                  href="https://github.com/assiva"
-                  target="_blank"
+                <a href="https://github.com/assiva" target="_blank"
                   >Annual Report 2023</a
                 >
               </li>
