--- a/src/app/components/common/navbar/navbar.component.html
+++ b/src/app/components/common/navbar/navbar.component.html
@@ -1,36 +1,92 @@
 <nav class="navbar navbar-expand-lg navbar-light fixed-top">
   <div class="container-fluid">
     <a class="navbar-brand" routerLink="/">
-      <img id="assiva_logo" class="navbar-brand" src="{{ navbarLogo }}" width="100" />
+      <img
+        id="assiva_logo"
+        class="navbar-brand"
+        src="{{ navbarLogo }}"
+        width="100"
+      />
     </a>
     <div class="navbar-container">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
-        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarNavDropdown"
+        aria-controls="navbarNavDropdown"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
         <span class="navbar-toggler-icon"></span>
       </button>
       <div id="theme-toggler" class="theme-toggler" (click)="toggleTheme()">
-        <svg *ngIf="toggleIcon==='sun';" xmlns="http://www.w3.org/2000/svg" id="toggle-icon" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-          <path stroke-linecap="round" stroke-linejoin="round" d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z" />
+        <svg
+          *ngIf="toggleIcon === 'sun'"
+          xmlns="http://www.w3.org/2000/svg"
+          id="toggle-icon"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke="currentColor"
+          stroke-width="2"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z"
+          />
         </svg>
-        <svg *ngIf="toggleIcon==='moon';" xmlns="http://www.w3.org/2000/svg" id="toggle-icon" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-          <path stroke-linecap="round" stroke-linejoin="round" d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z" />
+        <svg
+          *ngIf="toggleIcon === 'moon'"
+          xmlns="http://www.w3.org/2000/svg"
+          id="toggle-icon"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke="currentColor"
+          stroke-width="2"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z"
+          />
         </svg>
       </div>
     </div>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" routerLink="/" [routerLinkActive]="['active']"
-            [routerLinkActiveOptions]="{ exact: true }">Home</a>
+          <a
+            class="nav-link"
+            routerLink="/"
+            [routerLinkActive]="['active']"
+            [routerLinkActiveOptions]="{ exact: true }"
+            >Home</a
+          >
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/about" [routerLinkActive]="['active']">About</a>
+          <a
+            class="nav-link"
+            routerLink="/about"
+            [routerLinkActive]="['active']"
+            >About</a
+          >
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/board" [routerLinkActive]="['active']">Expertise</a>
+          <a
+            class="nav-link"
+            routerLink="/board"
+            [routerLinkActive]="['active']"
+            >Expertise</a
+          >
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/contact" [routerLinkActive]="['active']">Contact</a>
+          <a
+            class="nav-link"
+            routerLink="/contact"
+            [routerLinkActive]="['active']"
+            >Contact</a
+          >
         </li>
       </ul>
     </div>
@@ -38,5 +94,5 @@
 </nav>
 
 <div class="exclusive-banner">
-  <img src="../../../../assets/img/logo-assiva-color.jpeg" id="logo" alt="navbar image" />
+  <img src="assets/img/logo-assiva-color.jpeg" id="logo" alt="navbar image" />
 </div>
