--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -9,7 +9,7 @@
         </p>
       </div>
       <div class="col-12 col-md-6 ml-md-auto mt-4 mt-md-0">
-        <img alt="image" class="img-fluid" src="../../../assets/img/2.svg" />
+        <img alt="image" class="img-fluid" src="/assets/img/2.svg" />
       </div>
     </div>
   </div>
@@ -165,7 +165,10 @@
               </div>
             </div>
             <div class="text-center">
-              <button type="submit" (click)="this.contactForm.markAllAsTouched()">
+              <button
+                type="submit"
+                (click)="this.contactForm.markAllAsTouched()"
+              >
                 Send Message
               </button>
             </div>
