--- a/src/app/components/member/member.component.html
+++ b/src/app/components/member/member.component.html
@@ -5,13 +5,11 @@
         <h2 class="hero-text">Notre ADN au service de vos défis IT</h2>
         <br />
         <p class="description-text">
-          Assiva Consulting, est un Cabinet de Conseil spécialisé en accompagnement digital, Maîtrise d’Œuvre et Maîtrise d’Ouvrage.
+          Assiva Consulting, est un Cabinet de Conseil spécialisé en
+          accompagnement digital, Maîtrise d’Œuvre et Maîtrise d’Ouvrage.
         </p>
         <br />
-        <a
-          href="https://forms.gle/SVc2WoS9rgLCyr1x7"
-          target="_blank"
-        >
+        <a href="https://forms.gle/SVc2WoS9rgLCyr1x7" target="_blank">
           <button
             class="member-btn btn animate__animated animate__shakeX animate__delay-2s 2s"
           >
@@ -20,35 +18,32 @@
         </a>
       </div>
       <div class="col-sm-12 col-md-6 col-lg-6 text-center">
-        <img src="../../assets/img/img-member2.svg" class="img-member" />
+        <img src="/assets/img/img-member2.svg" class="img-member" />
       </div>
     </div>
   </div>
 
-  <div class="container-fluid bg-secondary auto-space auto-space-vertical section-2">
+  <div
+    class="container-fluid bg-secondary auto-space auto-space-vertical section-2"
+  >
     <div class="row justify-content-center">
       <div class="col col-md-8 text-center">
         <h2 class="h2">What We Do?</h2>
         <br />
-        <p class="description-text text-center">
-          A compléter
-        </p>
+        <p class="description-text text-center">A compléter</p>
       </div>
     </div>
   </div>
 
   <div class="container-fluid auto-space auto-space-vertical my-3">
     <div class="row justify-content-center align-items-center">
-      <img
-        class="mascot mb-5 mb-lg-0 mr-lg-3"
-        src="../../assets/img/mascot.png"
-      />
+      <img class="mascot mb-5 mb-lg-0 mr-lg-3" src="/assets/img/mascot.png" />
       <div class="col col-11 col-md-8 col-lg-4 ml-0 ml-lg-5 text-center">
         <h2 class="h2">Hello There!</h2>
         <br />
         <p class="description-text text-center">
-          You can call me Nif and I'm the adorable mascot of Assiva Consulting. Join hands with me and be a part of the wondrous world of
-          innovation.
+          You can call me Nif and I'm the adorable mascot of Assiva Consulting.
+          Join hands with me and be a part of the wondrous world of innovation.
         </p>
       </div>
     </div>
@@ -58,25 +53,29 @@
     <div class="row">
       <div class="four col-sm-6 col-md-3 my-2">
         <div class="counter-box colored app-box-shadow-v3">
-          <i class="fa fa-calendar"></i> <span class="counter counter-events">{{eventCount}}</span>
+          <i class="fa fa-calendar"></i>
+          <span class="counter counter-events">{{ eventCount }}</span>
           <p>Events</p>
         </div>
       </div>
       <div class="four col-sm-6 col-md-3 my-2">
         <div class="counter-box app-box-shadow-v3">
-          <i class="fa fa-group"></i> <span class="counter counter-members">{{memberCount}}</span>
+          <i class="fa fa-group"></i>
+          <span class="counter counter-members">{{ memberCount }}</span>
           <p>Members</p>
         </div>
       </div>
       <div class="four col-sm-6 col-md-3 my-2">
         <div class="counter-box app-box-shadow-v3">
-          <i class="fa fa-github"></i> <span class="counter counter-repos">{{reposCount}}</span>
+          <i class="fa fa-github"></i>
+          <span class="counter counter-repos">{{ reposCount }}</span>
           <p>Projects</p>
         </div>
       </div>
       <div class="four col-sm-6 col-md-3 my-2">
         <div class="counter-box app-box-shadow-v3">
-          <i class="fa fa-video-camera"></i> <span class="counter counter-webinars">{{webinarCount}}</span>
+          <i class="fa fa-video-camera"></i>
+          <span class="counter counter-webinars">{{ webinarCount }}</span>
           <p>Webinars</p>
         </div>
       </div>
