update img references

--- a/src/app/components/board/board.component.html
+++ b/src/app/components/board/board.component.html
@@ -11,7 +11,7 @@
 <section>
   <div class="container-fluid auto-space auto-space-vertical my-3">
     <div class="row justify-content-center align-items-center">
-      <img class="mascot mb-5 mb-lg-0 mr-lg-3" src="/assets/img/ca.png" />
+      <img class="mascot mb-5 mb-lg-0 mr-lg-3" src="assets/img/ca.png" />
       <div class="col col-11 col-md-8 col-lg-4 ml-0 ml-lg-5 text-center">
         <h2 class="h2">Crédit Agricole Corporate & Investment Bank</h2>
         <br />
