--- a/src/app/components/member/member.component.html
+++ b/src/app/components/member/member.component.html
@@ -18,7 +18,7 @@
         </a>
       </div>
       <div class="col-sm-12 col-md-6 col-lg-6 text-center">
-        <img src="/assets/img/img-member2.svg" class="img-member" />
+        <img src="assets/img/img-member2.svg" class="img-member" />
       </div>
     </div>
   </div>
@@ -37,7 +37,7 @@
 
   <div class="container-fluid auto-space auto-space-vertical my-3">
     <div class="row justify-content-center align-items-center">
-      <img class="mascot mb-5 mb-lg-0 mr-lg-3" src="/assets/img/mascot.png" />
+      <img class="mascot mb-5 mb-lg-0 mr-lg-3" src="assets/img/mascot.png" />
       <div class="col col-11 col-md-8 col-lg-4 ml-0 ml-lg-5 text-center">
         <h2 class="h2">Hello There!</h2>
         <br />
