--- a/src/app/components/board/board.component.html
+++ b/src/app/components/board/board.component.html
@@ -12,10 +12,12 @@
   <div class="container-fluid auto-space auto-space-vertical my-3">
     <div class="row justify-content-center align-items-center">
       <img class="mascot mb-5 mb-lg-0 mr-lg-3" src="assets/img/ca.png" />
-      <div class="col col-11 col-md-8 col-lg-4 ml-0 ml-lg-5 text-center">
+      <div
+        class="col col-11 col-md-8 col-lg-4 ml-0 ml-lg-5 text-center description"
+      >
         <h2 class="h2">Crédit Agricole Corporate & Investment Bank</h2>
         <br />
-        <p class="description-text text-center">
+        <p class="text-center description-text">
           Crédit Agricole CIB est la banque de financement et d'investissement
           du groupe Crédit Agricole. On est intervenu au niveau de la conception
           et développement d'une partie du SI liée au KYC Environnement
