--- a/src/app/components/common/navbar/navbar.component.html
+++ b/src/app/components/common/navbar/navbar.component.html
@@ -94,5 +94,9 @@
 </nav>
 
 <div class="exclusive-banner">
-  <img src="assets/img/logo-assiva-color.jpeg" id="logo" alt="navbar image" />
+  <img
+    src="assets/img/logo-assiva-no-background.png"
+    id="logo"
+    alt="navbar image"
+  />
 </div>
