--- a/src/app/components/common/navbar/navbar.component.css
+++ b/src/app/components/common/navbar/navbar.component.css
@@ -24,14 +24,14 @@
 
 .exclusive-banner {
   position: fixed;
-  left: 0;
-  top: 0;
-  width: 250px;
+  left: 10px;
+  top: 5px;
+  width: 200px;
   z-index: 100000;
 }
 
 .exclusive-banner img {
-  width: 100%;
+  width: 65%;
 }
 
 .theme-toggler {
