--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,10 @@
 <app-navbar></app-navbar>
-
 <main role="main">
   <router-outlet #outlet="outlet"></router-outlet>
+  <app-home></app-home>
+  <app-about></app-about>
+  <app-board></app-board>
+  <app-contact></app-contact>
 </main>
 
 <app-footer></app-footer>
