--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,9 @@
 <app-navbar></app-navbar>
+
 <main role="main">
-  <router-outlet #outlet="outlet"></router-outlet>
-  <app-home></app-home>
-  <app-about></app-about>
-  <app-board></app-board>
-  <app-contact></app-contact>
+  <div [@routeAnimations]="prepareRoute(outlet)">
+    <router-outlet #outlet="outlet"></router-outlet>
+  </div>
 </main>
 
 <app-footer></app-footer>
