--- a/src/app/components/member/member.component.html
+++ b/src/app/components/member/member.component.html
@@ -9,7 +9,7 @@
           accompagnement digital, Maîtrise d’Œuvre et Maîtrise d’Ouvrage.
         </p>
         <br />
-        <a href="https://forms.gle/SVc2WoS9rgLCyr1x7" target="_blank">
+        <a routerLink="/contact" [routerLinkActive]="['active']">
           <button
             class="member-btn btn animate__animated animate__shakeX animate__delay-2s 2s"
           >
