--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -43,14 +43,16 @@
               <div class="info-box">
                 <fa-icon [icon]="faEnvelope"></fa-icon>
                 <h3>Email Us</h3>
-                <a href="mailto:infoassiva@gmail.com">infoassiva@gmail.com</a>
+                <a href="mailto:assiva.consulting@gmail.com"
+                  >assiva.consulting@gmail.com</a
+                >
               </div>
             </div>
             <div class="col-md-6">
               <div class="info-box">
                 <fa-icon [icon]="faPhoneAlt"></fa-icon>
                 <h3>Call Us</h3>
-                <a href="tel:+94778655349">+33 662 92 84 433</a>
+                <a href="tel:+339">+33 662 92 84 433</a>
               </div>
             </div>
           </div>
