--- a/src/app/components/board/board.component.html
+++ b/src/app/components/board/board.component.html
@@ -8,22 +8,119 @@
     </h2>
   </div>
 </section>
+
+<!-- ======= Caisse des depots Section ======= -->
 <section>
   <div class="container-fluid auto-space auto-space-vertical my-3">
     <div class="row justify-content-center align-items-center">
-      <img class="mascot mb-5 mb-lg-0 mr-lg-3" src="assets/img/ca.png" />
-      <div
-        class="col col-11 col-md-8 col-lg-4 ml-0 ml-lg-5 text-center description"
-      >
-        <h2 class="h2">Crédit Agricole Corporate & Investment Bank</h2>
+      <img
+        class="mascot mb-5 mb-lg-0 mr-lg-3"
+        src="assets/img/caisseDesDepots-logo.png"
+      />
+      <div class="col col-11 col-md-8 col-lg-4 ml-0 ml-lg-5 description">
+        <h2 class="h2 text-center">Caisse des Dépôts Groupe</h2>
         <br />
-        <p class="text-center description-text">
-          Crédit Agricole CIB est la banque de financement et d'investissement
-          du groupe Crédit Agricole. On est intervenu au niveau de la conception
-          et développement d'une partie du SI liée au KYC Environnement
-          technique : technologies open source, Spring, Hibernate, Oracle
+        <p class="description-text">
+          Participation au développement de la nouvelle platefome de la Banque
+          des territoires qui permet de regrouper les offres de la Caisse des
+          Dépôts et de ses filiales au service des territoires.<br />
+          <b>Environnement technique : </b>technologies open source, Spring,
+          Hibernate, Docker, Kubernetes
         </p>
       </div>
     </div>
   </div>
+
+  <!-- ======= Société Générale Section ======= -->
+  <section>
+    <div class="container-fluid auto-space auto-space-vertical my-3">
+      <div class="row justify-content-center align-items-center">
+        <img
+          class="mascot mb-5 mb-lg-0 mr-lg-3"
+          src="assets/img/societeGeneral-logo.jpg"
+        />
+        <div class="col col-11 col-md-8 col-lg-4 ml-0 ml-lg-5 description">
+          <h2 class="h2 text-center">Société Générale</h2>
+          <br />
+          <p class="description-text">
+            Gestion des référentiels tiers de la banque d’investissement <br />
+            <b>Environnement technique : </b>technologies open source, Spring,
+            Hibernate, MongoDB, Microsoft Azure
+          </p>
+        </div>
+      </div>
+    </div>
+
+    <!-- ======= Ministère de l'intérieur Section ======= -->
+    <section>
+      <div class="container-fluid auto-space auto-space-vertical my-3">
+        <div class="row justify-content-center align-items-center">
+          <img
+            class="mascot mb-5 mb-lg-0 mr-lg-3"
+            src="assets/img/ministereInterior.png"
+          />
+          <div class="col col-11 col-md-8 col-lg-4 ml-0 ml-lg-5 description">
+            <h2 class="h2 text-center">Ministère de l'intérieur</h2>
+            <br />
+            <p class="description-text">
+              Nous sommes intervenu dans le cadre du Plan Préfectures Nouvelle
+              Génération proposé par le ministre de l'intérieur. Nous avons
+              participé activement au développement ainsi de la mise en prod de
+              la partie liée à la dématérialisation des démarches concernant la
+              carte grise.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- ======= Crédit Agricole Section ======= -->
+    <section>
+      <div class="container-fluid auto-space auto-space-vertical my-3">
+        <div class="row justify-content-center align-items-center">
+          <img
+            class="mascot mb-5 mb-lg-0 mr-lg-3"
+            src="assets/img/creditAgricole-logo.png"
+          />
+          <div class="col col-11 col-md-8 col-lg-4 ml-0 ml-lg-5 description">
+            <h2 class="h2 text-center">
+              Crédit Agricole Corporate & Investment Bank
+            </h2>
+            <br />
+            <p class="description-text">
+              Crédit Agricole CIB est la banque de financement et
+              d'investissement du groupe Crédit Agricole. On est intervenu au
+              niveau de la conception et développement d'une partie du SI liée
+              au KYC <br />
+              <b>Environnement technique : </b>technologies open source, Spring,
+              Hibernate, Oracle
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- ======= Enedis Section ======= -->
+    <section>
+      <div class="container-fluid auto-space auto-space-vertical my-3">
+        <div class="row justify-content-center align-items-center">
+          <img
+            class="mascot mb-5 mb-lg-0 mr-lg-3"
+            src="assets/img/enedis.png"
+          />
+          <div class="col col-11 col-md-8 col-lg-4 ml-0 ml-lg-5 description">
+            <h2 class="h2 text-center">Enedis</h2>
+            <br />
+            <p class="description-text">
+              Nous sommes intervenu dans le cadre du Plan Préfectures Nouvelle
+              Génération proposé par le ministre de l'intérieur. Nous avons
+              participé activement au développement ainsi de la mise en prod de
+              la partie liée à la dématérialisation des démarches concernant la
+              carte grise.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+  </section>
 </section>
