--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -3,9 +3,11 @@
   <div class="container">
     <div class="row align-items-center">
       <div class="col-12 col-md-6 col-lg-6">
-        <h1 class="headerText title">Contact Us</h1>
+        <h1 class="headerText title">Contact</h1>
         <p class="lead">
-          Fill up the form and our Team will get back to you within 24 hours.
+          Contactez-nous pour l'ensemble de
+          <b>vos projets de transformation digitale. </b> Nous nous chargerons
+          de trouver des solutions adaptées à vos besoins.
         </p>
       </div>
       <div class="col-12 col-md-6 ml-md-auto mt-4 mt-md-0">
