--- a/src/app/components/common/navbar/navbar.component.html
+++ b/src/app/components/common/navbar/navbar.component.html
@@ -61,7 +61,7 @@
             routerLink="/"
             [routerLinkActive]="['active']"
             [routerLinkActiveOptions]="{ exact: true }"
-            >Home</a
+            >Accueil</a
           >
         </li>
         <li class="nav-item">
@@ -69,7 +69,7 @@
             class="nav-link"
             routerLink="/about"
             [routerLinkActive]="['active']"
-            >About</a
+            >Qui sommes nous?</a
           >
         </li>
         <li class="nav-item">
